syntax = "proto3";

package layer.bridge;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos/msg/v1/msg.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/tellor-io/layer/x/bridge/types";

message BoolSubmitted {
    bool submitted = 1;
}

message ValidatorCheckpointParams {
    bytes checkpoint = 1;
    bytes valset_hash = 2;
    uint64 timestamp = 3;
    uint64 power_threshold = 4;
    uint64 block_height = 5;
}
